swag doc fixs for articles
